# app/Http/Controllers/API/AuthController.php
@@ -6,6 +6,7 @@ use Illuminate\Support\Facades\Auth;
 use Illuminate\Http\Request;
 use App\Models\User;
 use App\Http\Requests\UpdateUser;
+use App\Http\Requests\Register;
 use App\Http\Resources\UserResource;
 use Illuminate\Support\Facades\Hash;
 
@@ -44,6 +45,46 @@ class AuthController extends ApiController
         }
 
         $user = User::where('email', $request['email'])->firstOrFail();
+        $token = $user->createToken('auth_token')->plainTextToken;
+        return $this->returnSuccess([
+            'token' => $token,
+        ]);
+    }
+
+
+    /**
+     * @OA\Post(
+     *     tags={"Auth"},
+     *     path="/register",
+     *     @OA\RequestBody(
+     *          required=true,
+     *          description="The Token Request",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="email",type="string",example="test@example.com"),
+     *              @OA\Property(property="name",type="string",example="John Doo"),
+     *              @OA\Property(property="password",type="string",example="password"),
+     *              @OA\Property(property="password_confirmation", type="string", example="password"),
+     *          )
+     *     ),
+     *     @OA\Response(response=200, description="Return access token", content={
+     *          @OA\MediaType(mediaType="application/json",
+     *          @OA\Schema(
+     *              @OA\Property(
+     *                  property="token",
+     *                  type="string",
+     *                  description="Access token"
+     *              ),
+     *          ))
+     *     }),
+     * )
+     */
+    public function register(Register $request)
+    {
+        $user = User::create([
+            'name' => $request->name,
+            'email' => $request->email,
+            'password' => Hash::make($request->password),
+        ]);
         $token = $user->createToken('auth_token')->plainTextToken;
         return $this->returnSuccess([
             'token' => $token,
