# routes/api.php
@@ -19,6 +19,7 @@ use App\Http\Middleware\AcceptLanguageMiddleware;
 */
 Route::middleware(AcceptLanguageMiddleware::class)->group(function () {
     Route::post('/login', [AuthController::class, 'login'])->name('api.login');
+    Route::post('/register', [AuthController::class, 'register'])->name('api.register');
 
     Route::middleware('auth:sanctum')->group(function () {
         Route::post('/logout', [AuthController::class, 'logout'])->name('api.logout');
